WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283567
Fix regression in Quirks::needsBingGestureEventQuirk
https://bugs.webkit.org/show_bug.cgi?id=283567
Summary
Fix regression in Quirks::needsBingGestureEventQuirk
Anne van Kesteren
Reported
2024-11-22 07:39:19 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Anne van Kesteren
Comment 1
2024-11-22 07:40:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37024
EWS
Comment 2
2024-11-22 22:42:54 PST
Committed
287000@main
(438ee7759c8e): <
https://commits.webkit.org/287000@main
> Reviewed commits have been landed. Closing PR #37024 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-22 22:43:13 PST
<
rdar://problem/140459545
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug