Fix regression in Quirks::needsBingGestureEventQuirk https://bugs.webkit.org/show_bug.cgi?id=283567

Reviewed by Wenson Hsieh and Brent Fulgham.

Correct a typo (!! instead of !) made in 286807@main.

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::needsBingGestureEventQuirk const):

Canonical link: https://commits.webkit.org/287000@main